--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
-        "mews/purifier": "^3.4"
+        "mews/purifier": "^3.4",
+        "mpdf/mpdf": "^8.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -24,6 +25,7 @@
         "phpunit/phpunit": "^11.5.3"
     },
     "autoload": {
+        "files": ["app/Helpers/SteadfastHelper.php"],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
